--- a/stack.yaml
+++ b/stack.yaml
@@ -18,7 +18,9 @@
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
 resolver:
-  url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/8.yaml
+  # url: https://raw.githubusercontent.com/commercialhaskell/stackage-snapshots/master/lts/21/8.yaml
+  # ghc-9.4.6
+  lts-21.10
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
