--- a/container-functors.cabal
+++ b/container-functors.cabal
@@ -26,6 +26,7 @@ source-repository head
 library
   exposed-modules:
       Container
+      Dependent
       Examples
       Map
       Symbolic
@@ -38,6 +39,7 @@ library
       BlockArguments
       ConstraintKinds
       DerivingStrategies
+      DerivingVia
       EmptyDataDeriving
       FlexibleContexts
       FlexibleInstances
@@ -51,6 +53,7 @@ library
       TupleSections
       TypeApplications
       TypeFamilies
+      TypeOperators
       UndecidableInstances
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
   build-depends:
@@ -69,6 +72,7 @@ executable containers-exe
       BlockArguments
       ConstraintKinds
       DerivingStrategies
+      DerivingVia
       EmptyDataDeriving
       FlexibleContexts
       FlexibleInstances
@@ -82,6 +86,7 @@ executable containers-exe
       TupleSections
       TypeApplications
       TypeFamilies
+      TypeOperators
       UndecidableInstances
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
@@ -102,6 +107,7 @@ test-suite containers-test
       BlockArguments
       ConstraintKinds
       DerivingStrategies
+      DerivingVia
       EmptyDataDeriving
       FlexibleContexts
       FlexibleInstances
@@ -115,6 +121,7 @@ test-suite containers-test
       TupleSections
       TypeApplications
       TypeFamilies
+      TypeOperators
       UndecidableInstances
   ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
   build-depends:
