--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -71,6 +71,7 @@ library
     , Unsafe
     , Base
     , Data.Container.Core
+    , Data.Container.Foldable
     , Data.Container.Specialized
     , Data.Container.Properties
     , Data.SBV.Encode
