--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -82,6 +82,7 @@ library
     , Data.Map.Multi
     , Pretty
     , Unsafe
+    , Utils
 
   -- LANGUAGE extensions used by modules in this package.
   default-extensions:
