--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -75,6 +75,7 @@ library
     , Data.Container.Specialized
     , Data.Dup
     , Data.Functor.Context
+    , Data.Functor.Fun
     , Data.SBV.Container
     , Data.SBV.Encode
     , Data.SBV.Refine
