Refactor using functor signatures

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -76,6 +76,7 @@ library
     , Data.Dup
     , Data.Functor.Context
     , Data.Functor.Fun
+    , Data.Functor.Signatures
     , Data.SBV.Container
     , Data.SBV.Encode
     , Data.SBV.Refine
