Some refactoring and first attempts at introFoldr

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -83,6 +83,7 @@ library
     , DefaultSignatures
     , DerivingStrategies
     , DerivingVia
+    , DuplicateRecordFields
     , LambdaCase
     , OverloadedStrings
     , PatternSynonyms
@@ -96,6 +97,12 @@ library
     , mtl
     , prettyprinter
     , text
+    , lens
+    -- TODO: can we get refinery to work? it has some build error due to
+    -- MonadPlus not being in scope in Refinery.Tactic.Internal, which seems
+    -- like a problem with a restructuring of Control.Monad. It is only tested
+    -- up to 8.10.4, perhaps I can do a pull request for 9.8.2?
+    -- , refinery
 
   -- Directories containing source files.
   hs-source-dirs:   src
