--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -63,6 +63,7 @@ library
     , Language.Expr
     , Language.Container
     , Language.Container.Morphism
+    , Language.Container.Relation
     , Language.Problem
     , Refinements
 
