Use records for SExtension and SMorphism

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -88,6 +88,7 @@ library
     , DefaultSignatures
     , DerivingStrategies
     , DerivingVia
+    , DuplicateRecordFields
     , LambdaCase
     , PatternSynonyms
     , TypeAbstractions
