--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -65,6 +65,7 @@ library
     , Language.Container.Morphism
     , Language.Container.Relation
     , Language.Declaration
+    , Language.Parser
     , Refinements
 
   -- Modules included in this library but not exported.
@@ -98,6 +99,7 @@ library
     , prettyprinter
     , text
     , lens
+    , megaparsec
     -- TODO: can we get refinery to work? it has some build error due to
     -- MonadPlus not being in scope in Refinery.Tactic.Internal, which seems
     -- like a problem with a restructuring of Control.Monad. It is only tested
