Refactor refinements and add benchmark
Also fix a bug where input tuples are not parsed properly

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -97,6 +97,7 @@ library
   -- Other library packages from which modules are imported.
   build-depends:
       base ^>=4.19.0.0
+    , directory
     , containers
     , mtl
     , prettyprinter
@@ -130,8 +131,8 @@ executable parametrickery
 
   -- Other library packages from which modules are imported.
   build-depends:
-    base ^>=4.19.0.0,
-    parametrickery
+      base ^>=4.19.0.0
+    , parametrickery
 
   -- Directories containing source files.
   hs-source-dirs:   app
@@ -163,8 +164,11 @@ test-suite parametrickery-test
 
   -- Test dependencies.
   build-depends:
-    base ^>=4.19.0.0,
-    hspec,
-    containers,
-    QuickCheck,
-    parametrickery
+      base ^>=4.19.0.0
+    , directory
+    , hspec
+    , containers
+    , prettyprinter
+    , QuickCheck
+    , text
+    , parametrickery
