--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -50,12 +50,31 @@ extra-doc-files:    CHANGELOG.md
 -- Extra source files to be distributed with the package, such as examples, or a tutorial module.
 -- extra-source-files:
 
-common warnings
+common shared-properties
   ghc-options: -Wall
 
+  default-language: GHC2021
+
+  default-extensions:
+      BlockArguments
+    , DataKinds
+    , DefaultSignatures
+    , DerivingStrategies
+    , DerivingVia
+    , DuplicateRecordFields
+    , LambdaCase
+    , NoFieldSelectors
+    , OverloadedStrings
+    , OverloadedRecordDot
+    , PatternSynonyms
+    , TypeFamilies
+    , ViewPatterns
+
+  build-depends: base ^>=4.19.0.0
+
 library
-  -- Import common warning flags.
-  import:           warnings
+  -- Import shared properties.
+  import:           shared-properties
 
   -- Modules exported by the library.
   exposed-modules:
@@ -78,26 +97,9 @@ library
     , Utils
     , Test
 
-  -- LANGUAGE extensions used by modules in this package.
-  default-extensions:
-      BlockArguments
-    , DataKinds
-    , DefaultSignatures
-    , DerivingStrategies
-    , DerivingVia
-    , DuplicateRecordFields
-    , LambdaCase
-    , NoFieldSelectors
-    , OverloadedStrings
-    , OverloadedRecordDot
-    , PatternSynonyms
-    , TypeFamilies
-    , ViewPatterns
-
   -- Other library packages from which modules are imported.
   build-depends:
-      base ^>=4.19.0.0
-    , directory
+      directory
     , containers
     , mtl
     , prettyprinter
@@ -113,45 +115,22 @@ library
   -- Directories containing source files.
   hs-source-dirs:   src
 
-  -- Base language which the package is written in.
-  default-language: GHC2021
-
 executable parametrickery
-  -- Import common warning flags.
-  import:           warnings
+  -- Import shared properties.
+  import:           shared-properties
 
   -- .hs or .lhs file containing the Main module.
   main-is:          Main.hs
 
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
-
   -- Other library packages from which modules are imported.
-  build-depends:
-      base ^>=4.19.0.0
-    , parametrickery
+  build-depends: parametrickery
 
   -- Directories containing source files.
   hs-source-dirs:   app
 
-  -- Base language which the package is written in.
-  default-language: GHC2021
-
 test-suite parametrickery-test
-  -- Import common warning flags.
-  import:           warnings
-
-  -- Base language which the package is written in.
-  default-language: GHC2021
-
-  -- Modules included in this executable, other than Main.
-  -- other-modules:
-
-  -- LANGUAGE extensions used by modules in this package.
-  -- other-extensions:
+  -- Import shared properties.
+  import:           shared-properties
 
   -- The interface type and version of the test suite.
   type:             exitcode-stdio-1.0
@@ -164,8 +143,7 @@ test-suite parametrickery-test
 
   -- Test dependencies.
   build-depends:
-      base ^>=4.19.0.0
-    , directory
+      directory
     , hspec
     , containers
     , prettyprinter
