--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -110,7 +110,7 @@ library
     -- MonadPlus not being in scope in Refinery.Tactic.Internal, which seems
     -- like a problem with a restructuring of Control.Monad. It is only tested
     -- up to 8.10.4, perhaps I can do a pull request for 9.8.2?
-    -- , refinery
+    , refinery
 
   -- Directories containing source files.
   hs-source-dirs:   src
