Implement coverage checking

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -84,6 +84,7 @@ library
     , Language.Container
     , Language.Container.Morphism
     , Language.Container.Relation
+    , Language.Coverage
     , Language.Declaration
     , Language.Parser
     , Refinements
