--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -78,7 +78,7 @@ library
 
   -- Modules exported by the library.
   exposed-modules:
-      Data.Named
+      Data.Name
     , Language.Type
     , Language.Expr
     , Language.Container
