Separate tactics and synthesis

--- a/parametrickery.cabal
+++ b/parametrickery.cabal
@@ -89,6 +89,7 @@ library
     , Language.Pretty
     , Language.Parser
     , Language.Relevance
+    , Synth
     , Tactic
 
   -- Modules included in this library but not exported.
